--- a/udagram-reverseproxy/.travis.yml
+++ b/udagram-reverseproxy/.travis.yml
@@ -1,11 +1,9 @@
 ## Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
 ## Use either `docker-compose` or individual `docker build` commands
 ## Build
-  - docker build -t udagram-api-feed ./udagram-reverseproxy
+  - docker build -t udagram-reverseproxy ./udagram-reverseproxy
 ## Tagging
-  - docker tag udagram-api-feed tamnguyen2401/udagram-reverseproxy:v1
-## Do similar for other three images```
-```bash
+  - docker tag udagram-api-reverseproxy tamnguyen2401/udagram-reverseproxy:v1
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
