--- a/udagram-frontend/.travis.yml
+++ b/udagram-frontend/.travis.yml
@@ -3,7 +3,7 @@
 ## Build
   - docker build -t udagram-frontend ./udagram-frontend
 ## Tagging
-  - docker tag udagram-frontend tamnguyen2401/udagram-frontend:v1
+  - docker tag udagram-frontend:local tamnguyen2401/udagram-frontend:v1
 ## Push
 ## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
