--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -1,21 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: uda3-backend-feed
+  name: backend-feed
   labels:
-    app: uda3-backend-feed
+    app: backend-feed
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: uda3-backend-feed
+      app: backend-feed
   template:
     metadata:
       labels:
-        app: uda3-backend-feed
+        app: backend-feed
     spec:
       containers:
       - name: udagram-api-feed
         image: tamnguyen2401/udagram-api-feed:v1
         ports:
         - containerPort: 80
+        env:
+        - name: POSTGRES_HOST
+          value: uda3-postgres.c2auqbexjoq7.us-east-2.rds.amazonaws.com
+        - name: POSTGRES_DB
+          value: postgres
+        - name: AWS_BUCKET
+          value: arn:aws:s3:uda3-microservice-dev
+        - name: AWS_REGION
+          value: us-east-2
+        - name: AWS_PROFILE
+          value: default
+        - name: JWT_SECRET
+          value: testing
+        - name: URL
+          value: URL=http://localhost:8100
