--- a/backend-feed-service.yaml
+++ b/backend-feed-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: uda3-backend-feed
+  name: backend-feed
   labels:
-    run: uda3-backend-feed
+    run: backend-feed
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: uda3-backend-feed
+    run: backend-feed
