--- a/backend-user-service.yaml
+++ b/backend-user-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: uda3-backend-user
+  name: backend-user
   labels:
-    run: uda3-backend-user
+    run: backend-user
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: uda3-backend-user
+    run: backend-user
