--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -1,8 +1,7 @@
 apiVersion: v1
-kind: Secret
+kind: ConfigMap
 metadata:
   name: uda3-env-secret
-type: Opaque
 data:
-  POSTGRES_USERNAME: dGFtbmd1eWVuMjQwMQ==
-  POSTGRES_PASSWORD: cXdlcnR5MTIzNDU2
+  POSTGRES_USERNAME: postgres
+  POSTGRES_PASSWORD: qwerty123456
