--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: uda3-frontend
+  name: frontend
   labels:
-    app: uda3-frontend
+    app: frontend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: uda3-frontend
+      app: frontend
   template:
     metadata:
       labels:
-        app: uda3-frontend
+        app: frontend
     spec:
       containers:
       - name: udagram-frontend
