--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: uda3-frontend
+  name: frontend
   labels:
-    run: uda3-frontend
+    run: frontend
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: uda3-frontend
+    run: frontend
