--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: uda3-reverseproxy
+  name: reverseproxy
   labels:
-    app: uda3-reverseproxy
+    app: reverseproxy
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: uda3-reverseproxy
+      app: reverseproxy
   template:
     metadata:
       labels:
-        app: uda3-reverseproxy
+        app: reverseproxy
     spec:
       containers:
       - name: udagram-reverseproxy
