--- a/reverseproxy-service.yaml
+++ b/reverseproxy-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: uda3-reverseproxy
+  name: reverseproxy
   labels:
-    run: uda3-reverseproxy
+    run: reverseproxy
 spec:
   ports:
   - port: 80
     protocol: TCP
   selector:
-    run: uda3-reverseproxy
+    run: reverseproxy
