--- a/udagram-api-feed/.travis.yml
+++ b/udagram-api-feed/.travis.yml
@@ -1,10 +1,24 @@
-## Assuming the .travis.yml file is in the project directory, and there is a separate sub-directory for each service
-## Use either `docker-compose` or individual `docker build` commands
-## Build
+language: node_js
+node_js:
+  - 13
+
+services:
+  - docker
+
+# Pre-testing installs
+install:
+  - echo "nothing needs to be installed"
+
+# Scripts to be run such as tests
+before_script:
+  - echo "no tests"
+
+script:
+  - docker --version # print the version for logging
   - docker build -t udagram-api-feed ./udagram-api-feed
-## Tagging
-  - docker tag udagram-api-feed tamnguyen2401/udagram-api-feed:v1
-## Push
-## Assuming DOCKER_PASSWORD and DOCKER_USERNAME are set in the Travis repository settings
+  - docker tag udagram-api-feed:local tamnguyen2401/udagram-api-feed:v2
+
+# Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
+after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push tamnguyen2401/udagram-api-feed:v1
+  - docker push tamnguyen2401/udagram-api-feed:v2
