--- a/aws-secret.yaml
+++ b/aws-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: aws-credentials
 type: Opaque
 data:
-  id: ASIAWLXWTC2BOZ4NG5P3
-  key: uf8HShYHUCdqTMX7I4U1PEGm7XrKL49fCFWlvv5t
+  id: ASIAWLXWTC2BA54GW5NK
+  key: E7nOctywgTUOVu2Yk6i7Qic8uYS+rN/12ZVrzkWe
