--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,5 @@ venv/
 !.elasticbeanstalk/*.global.yml
 set_env.sh
 set_env.bat
-set_env.sh
-screenshots/DockerHub.png
-screenshots/KubectlGetPods.png
-screenshots/KubectlHpa.png
-screenshots/KubectlLogs.png
-screenshots/KubectlServices1.png
-screenshots/KubectlServices2.png
+aws-secret.yaml
+env-secret.yaml
